# deepfake

./: .gitignore  README.md  krrish.py  pyproject.toml  pyramidal_bilstm_deepfake_paper.tex
