[tool.poetry]
name = "pyramidal-bilstm-deepfake"
version = "1.0.0"
description = "World-class audio deepfake detection using pyramidal BiLSTM architecture with comprehensive augmentation pipeline"
authors = ["Krrish <krrish@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^2.0.0"
librosa = "^0.11.0"
tensorflow = "^2.20.0"
scipy = "^1.13.0"
optuna = "^4.5.0"
scikit-learn = "^1.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
